language/move-lang/tests/move_check/parser/function_params_missing.exp
error: 

   ┌── tests/move_check/parser/function_params_missing.move:3:12 ───
   │
 3 │     fun fn { }
   │            - Expected '('
   │            ^ Unexpected '{'
   │

